FIXED: bug, open student plan, switch to other tool (eg, Edit Conditions or profile), return to student, open plan, no plan visible. Reload and the plan is good. This is not a real use case so defer. 12/20/16
Had to remove  automatic generation of plan when new student is created.

This will obviously have to come back but for now, the bad mystery bug is gone.

--- a/service/sr-careplanner/src/user/nurse/viewer/viewer.less
+++ b/service/sr-careplanner/src/user/nurse/viewer/viewer.less
@@ -20,5 +20,5 @@ height:1000px;
 
 .downloadWarning{
 font-size:8pt;
-color: rgba(66, 165, 245, 0.4);
+color: rgba(66, 165, 245, 0.7);
 }
